@@ -1,5 +1,16 @@
 2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
 
+	* plugins/thumbnail/gimv_thumb.c, plugins/image_loader/prefs_spi.c,
+	  plugins/image_view/prefs_xine.c, plugins/image_view/prefs_mplayer.c,
+	  src/gimv_elist.c, src/gimv_image_win.c, src/auto_completion.c,
+	  src/gtkutils.c, src/gimv_prefs_win.c, src/gimv_thumb_win.c,
+	  src/prefs_ui/prefs_ui_etc.c, src/prefs_ui/prefs_ui_common.c,
+	  src/prefs_ui/prefs_ui_progs.c, src/prefs_ui/prefs_ui_thumbwin.c,
+	  src/prefs_ui/prefs_ui_plugin.c, src/prefs_ui/prefs_ui_imagewin.c:
+	gtk_widget_set_usize -> gtk_widget_set_size_request.
+
+2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_image_win.c. src/gimv_thumb_win.c: Don't offset help menu.
 
 2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
